--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,8 @@
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: small;
+    background-color: ;
+}
 .personal {
     background-color: white;
 
@@ -21,7 +26,7 @@
 .PROFILE {
     background-color: white;
     width: 100%;
-    padding-left: 50px;
+    padding-left: 50px
     padding-right: 50px;
 }
 
@@ -29,24 +34,11 @@
     display: flex;
 }
 
-.borde {
-    border-left: 3px ;
-}
-
-.nombre {
-    font-size: 30px;
-    width: 50%;
-    margin-left: 20px;
-}
-
-.profesion {
-    font-size: 25px;
-}
-
 .PROFILE-element {
-    width: 100%;
+    width: 800px;
     margin-right: 40px;
     text-align: justify;
+
 }
 
 .PROFILE {
@@ -56,6 +48,29 @@
     margin-left: 80px;
 
 }
+
+.borde {
+    border-left: 5px
+}
+
+.persona {
+    font-size: 30px;
+    width: 30%;
+    margin-left: 5px;
+
+}
+.subrayado {
+    background-color: blanchedalmond;
+
+}
+    
+
+
+.profesion {
+    font-size: 25px;
+}
+
+
 
 .education {
     background-color: white;
@@ -90,4 +105,185 @@
     
     
     
+}.experience {
+    background-color: white;
+    width: 100%;
+    margin-left: 200px;
+    
 }
+
+
+.experience-container {
+    display: flex;
+    margin-right: 370px;
+    
+}
+
+.experience-element {
+    padding: 25px 25px 25px 0px;
+    width: 50%;
+    text-align: justify;
+
+}
+
+.bordeo {
+    padding-left: 35px;
+    border-left: 3px solid black;
+    margin-left: 30px;
+    
+    
+}
+
+.skills-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: sans-serif;
+    border-bottom: 3px solid black;
+    margin-left: 80px;
+    margin-right: 50px;
+
+}
+
+h1 {
+    margin-bottom: 20px;
+    padding-right: 850px;
+}
+
+.skills-group {
+    display: flex;
+    gap: 50px; /* Espacio entre grupos */
+    margin-bottom: 30px; /* Espacio entre filas */
+    
+}
+
+.skill {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+    width: 200px; /* Ancho de la barra */
+    
+}
+
+label {
+    margin-bottom: 5px;
+}
+
+.progress-bar {
+    width: 100%;
+    height: 10px;
+    background-color: #eee;
+    border-radius: 5px;
+    overflow: hidden;
+    border: 1px solid black;
+}
+
+.progress {
+    height: 100%;
+    background-color: #333;
+    border-radius: 5px;
+    width: 0;
+}
+
+/* Ancho específico para cada habilidad */
+#python {
+    width: 90%;
+}
+
+#javascript {
+    width: 80%;
+}
+
+#c++ {
+    width: 70%;
+}
+
+#ruby {
+    width: 85%;
+}
+
+#csharp {
+    width: 95%;
+}
+
+#sql {
+    width: 75%;
+}
+
+.projects {
+    background-color: white;
+    width: 100%;
+    margin-left: 200px;
+    
+    
+    
+}
+
+
+.projects-container {
+    display: flex;
+    margin-right: 370px;
+    
+    
+}
+
+.projects-element {
+    padding: 25px 25px 25px 0px;
+    width: 50%;
+    text-align: justify;
+    
+
+}
+
+.bord {
+    padding-left: 35px;
+    border-left: 3px solid black;
+    margin-left: 30px;
+    
+    
+}
+
+.projects2 {
+    background-color: white;
+    width: 100%;
+    padding-bottom: 30px;
+    margin-left: 215px;
+    
+    
+    
+    
+    
+}
+
+
+.projects2-container {
+    display: flex;
+    margin-right: 370px;
+    border-bottom: 3px solid black;
+    padding-bottom: 25px;
+    
+    
+}
+
+.projects2-element {
+    padding: 25px 25px 25px 0px;
+    width: 50%;
+    text-align: justify;
+    
+    
+    
+    
+    
+
+}
+
+.bor {
+    padding-left: 35px;
+    border-left: 3px solid black;
+    
+    
+    
+}
+
+
+
